--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -5,13 +5,16 @@
 
 {% block content %}
 <div class="registration-wrapper ha">
-<div class="page-headline ha">Registration</div>
-<p>If you have already an account, you can <a href="{% url 'login' %}">sign in</a></p>
-<form id="registrationform" method="POST" action="">
-    {% csrf_token %}
-    {{ registration_form | as_bootstrap }}
-    <button id="submit-registration-btn" type="submit" class="btn">Submit</button>
-</form>
+    <div class="page-headline ha">Registration</div>
+    <div id="registration-message">If you have already an account, <br> you can sign in <a
+            href="{% url 'login' %}">here</a></div>
+    <form id="registrationform" method="POST" action="">
+        {% csrf_token %}
+        {{ registration_form | as_bootstrap }}
+        <p id="submit-registration-btn-wrapper" class="ha">
+            <button id="submit-registration-btn" type="submit" class="btn">Submit</button>
+        </p>
+    </form>
 
 </div>
 {% endblock %}
