--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -15,9 +15,9 @@
         <div class="emailfield-resetform-wrapper ha">
 
             <label id="password-reset-label" for="id_email" class="control-label required-field">E-mail address:</label>
-            <div class="passwordresetform">
+            <div class="passwordresetform ha">
                 {{ form.email }}
-                <input type="submit" value="Reset password" />
+                <input class="btn pw-reset-btn" type="" value="Reset password" />
             </div>
         </div>
     </form>
