--- a/reviews/templates/reviewdetail.html
+++ b/reviews/templates/reviewdetail.html
@@ -9,29 +9,32 @@
     <div class="row row-flex">
         <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
             <div class="panel-body">
-                <h3 class="review-headline ha"><a href="{% url 'review_detail' review.id %}">{{ review.title }}</a></h3>
+                <h3 class="review-headline ha">{{ review.title }} </h3>
                 {% if review.image %}
                 <img class="product-image" src="{{ MEDIA_URL }}{{review.image}}" alt="image of {{review.product.name}} review">
                 {% endif %}
 
                 {% if user.is_authenticated and review.author.id == user.id %}
-                    <a id="edit-review-btn" href="{% url 'edit_review' review.id %}" class="btn"><i class="fa fa-edit"></i></a>
-                    <div id="review-del-req-btn" class="btn" onclick="showDeletePopup()"><i class="fa fa-trash"></i></div>
+                <a id="edit-review-btn" href="{% url 'edit_review' review.id %}" class="btn"><i class="fa fa-edit"></i></a>
+                <div id="review-del-req-btn" class="btn" onclick="showDeletePopup()"><i class="fa fa-trash"></i></div>
 
-                    <div id="confirm-delete-popup" class="vh">
-                        <div id="delete-popup-message" class="ha">Delete Review?</div>
-                        <a id="deleteConfirmBtn" href="{% url 'delete_review' review.id %}" class="btn">Delete
-                            Review</a>
-                        <div id="delete-cancel-btn" class="btn" onclick="closeDeletePopup()">Cancel</div>
-                    </div>
-                    {% endif %}
+                <div id="confirm-delete-popup" class="vh">
+                    <div id="delete-popup-message" class="ha">Delete Review?</div>                 
+                        <div id="delete-confirm-btn" class="btn">
+                            <a href="{% url 'delete_review' review.id %}"><b>Delete</b></a>
+                        </div>
+                        <div id="delete-cancel-btn" class="btn" onclick="closeDeletePopup()">
+                            Cancel
+                        </div>
+                </div>
+                {% endif %}
 
 
                 
                 <p></p>
                 <p class="product-description">{{ review.comment }}</p>
                 <p><span class="boldtext">Published by:</span> {{ review.author }} </p>
-                <p><span class="boldtext">Published on:</span> {{ review.created_date }} </p>
+                <p><span class="boldtext">Date:</span> {{ review.created_date }} </p>
                 <div class="review-stats">
                     <div class="stats-key"><i class="fa fa-eye"></i></div>
                     <div class="stats-value">{{ review.view_count }}</div>
@@ -39,10 +42,10 @@
                     <div class="stats-value">{{review.rating }}</div>
                 </div>
                 <div id="review-btn-bar" class="ha">
-                    <a id="back-to-product-btn" href="{% url 'product_detail' review.product.id %}" class="btn">Back to
-                        {{ review.product.name }}</a>
-                        <a id="back-to-product-btn" href="{% url 'product_detail' review.product.id %}" class="btn">Back to
-                            {{ review.product.name }}</a>
+                    <a id="back-to-products-btn" href="{% url 'products'%}" class="btn">Back to
+                        Products</a>
+                        <a id="back-to-reviews-btn" href="{% url 'get_reviews' %}" class="btn">Back to
+                            Reviews</a>
                 </div>
             </div>
         </div>
