--- a/reviews/templates/reviews.html
+++ b/reviews/templates/reviews.html
@@ -30,16 +30,19 @@
                 <div id="review-del-req-btn" class="btn" onclick="showDeletePopup()"><i class="fa fa-trash"></i></div>
 
                 <div id="confirm-delete-popup" class="vh">
-                    <div id="delete-popup-message" class="ha">Delete Review?</div>
-                    <a id="deleteConfirmBtn" href="{% url 'delete_review' review.id %}" class="btn">Delete
-                        Review</a>
-                    <div id="delete-cancel-btn" class="btn" onclick="closeDeletePopup()">Cancel</div>
+                    <div id="delete-popup-message" class="ha">Delete Review?</div>                 
+                        <div id="delete-confirm-btn" class="btn">
+                            <a href="{% url 'delete_review' review.id %}"><b>Delete</b></a>
+                        </div>
+                        <div id="delete-cancel-btn" class="btn" onclick="closeDeletePopup()">
+                            Cancel
+                        </div>
                 </div>
                 {% endif %}
                 <p></p>
                 <p class="product-description">{{ review.comment|truncatewords:10 }}</p>
                 <p><span class="boldtext">Published by:</span> {{ review.author }} </p>
-                <p><span class="boldtext">Published on:</span> {{ review.created_date }} </p>
+                <p><span class="boldtext">Date:</span> {{ review.created_date }} </p>
                 <div class="review-stats">
                     <div class="stats-key"><i class="fa fa-eye"></i></div>
                     <div class="stats-value">{{ review.view_count }}</div>
@@ -47,8 +50,7 @@
                     <div class="stats-value">{{review.rating }}</div>
                 </div>
                 <div id="review-btn-bar" class="ha">
-                    <a id="back-to-product-btn" href="{% url 'product_detail' review.product.id %}" class="btn">Back to
-                        {{ review.product.name }}</a>
+                    <a id="review-details-btn" href="{% url 'review_detail' review.id %}" class="btn">Review Details</a>
                 </div>
             </div>
         </div>
