--- a/static/scss/_partials/portrait-mobile/_portrait-mobile.scss
+++ b/static/scss/_partials/portrait-mobile/_portrait-mobile.scss
@@ -1,7 +1,5 @@
 @media screen and (max-width: 414px) and (max-height: 823px) and (orientation: portrait) {
 
-    // fontsize definitions
-
     @import "pages/_cart-page.scss";
     @import "pages/_checkout-page.scss";
     @import "pages/_login-page.scss";
@@ -16,14 +14,15 @@
 
     body {
         font-family: $dosisFont;
-        padding-top: 60px;
-        font-size: 5.5vw;
+        padding-top: 56px;
+        font-size: 5.0vw;
     }
 
     .page-headline {
         font-family: $dosisFont;
         font-size: 7vw;
-        padding-top: 4vw;
+        padding-top: 8vw;
+        padding-bottom: 2vw;
         width: 100%;
     }
 
@@ -138,12 +137,31 @@
 
     }
 
-    .badge {
-        padding-left: 9px;
-        padding-right: 9px;
-        -webkit-border-radius: 9px;
-        -moz-border-radius: 9px;
-        border-radius: 9px;
+    #wishlist-badge-bottom {
+        position: absolute;
+        top: -3vw;
+        left: 9vw;
+    }
+
+    
+    .badge-wishlist {
+        -webkit-border-radius: 3vw;
+        -moz-border-radius: 3vw;
+        border-radius: 3vw;
+        font-size: 4vw;
+    }
+
+
+    #cart-badge-bottom {
+        position: absolute;
+        top: -3vw;
+        left: 9vw;
+    }
+
+    .badge-cart {
+        -webkit-border-radius: 3vw;
+        -moz-border-radius: 3vw;
+        border-radius: 3vw;
         font-size: 4vw;
     }
 
