--- a/static/scss/_partials/portrait-mobile/pages/_cart-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_cart-page.scss
@@ -13,6 +13,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-bottom: 4vw;
 }
 
 .checkout-summary {
@@ -22,27 +23,39 @@
     width: 60%;
 }
 
-.empty-cart-Wrapper {
+.empty-cart-wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: center;
 }
 
 .no-cart-items {
-    width: 80%;
+    width: 95%;
     font-size: 5.5vw;
+    text-align: center;
 }
 
 .no-cart-items a {
     font-size: 5.5vw;
 }
 
+#emptycart-product-link {
+    width: 80%;
+    font-size: 10vw;
+    text-align: center;
+}
+
 .input-group-addon {
     font-size: 4vw;
 }
 
+#amend-btn-wrapper {
+    width: 100%;
+}
+
 .amend-btn {
-    width: 25vw;
+    width: 40vw;
     font-size: 5.0vw;
 }
 
@@ -60,6 +73,6 @@
 
 .checkout-btn {
     font-family: $dosisFont;
-    font-size: 16.0vw;
+    font-size: 5.0vw;
     width: 40vw;
 }
