--- a/static/scss/_partials/portrait-mobile/pages/_login-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_login-page.scss
@@ -10,8 +10,6 @@
 #reset-register-wrapper,
 #login-btn-wrapper {
     display: flex;
-    font-family: $dosisFont;
-    font-size: 5.5vw;
     width: 100%;
 
     margin: {
@@ -23,7 +21,12 @@
 #login-btn {
     background-color: lightblue;
     color: rgb(65, 65, 65);
+    width: 40vw;
+    font-family: $dosisFont;
+    font-size: 5.5vw;
+    transition: color .3s ease-in-out;
 }
+
 
 #password-reset-link {
     background-color: orange;
@@ -35,18 +38,20 @@
     margin-left: 2.4vw;
 }
 
-#login-btn, #password-reset-link,  #register-link {
-    width: 40vw;
+
+#password-reset-link,  #register-link {
+    width: 44vw;
     font-family: $dosisFont;
-    font-size: 5.5vw;
+    font-size: 4.5vw;
 }
 
 
 #password-reset-link a, #register-link a {
     color: rgb(65, 65, 65);
-    transition: color .4s ease-in-out;
+    transition: color .3s ease-in-out;
+    text-decoration: none;
 }
 
-#login-btn a:hover, #password-reset-link a:hover, #register-link a:hover {
+#login-btn:hover, #password-reset-link a:hover, #register-link a:hover {
     color: darkred;
 }
