--- a/static/scss/_partials/portrait-mobile/pages/_password-reset-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_password-reset-page.scss
@@ -16,15 +16,28 @@
 
 #password-reset-label {
     padding-right: 5px;
-    width: 44%;
+    width: 50%;
 }
 
 .passwordresetform {
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-wrap: wrap;
 }
 
 .passwordresetform #email-input-field {
     width: 100%;
+}
+
+.pw-reset-btn {
+    width: 80%;
+    font-family: $dosisFont;
+    font-size: 5.5vw;
+    margin-top: 6vw;
+    background-color: orange;
+    transition: color .3s ease-in-out;
+}
+
+.pw-reset-btn:hover {
+    color: darkred;
 }
