--- a/static/scss/_partials/portrait-mobile/pages/_productdetails-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_productdetails-page.scss
@@ -1,4 +1,3 @@
-
 .wishform {
     width: 8vw;
     position: absolute;
@@ -11,7 +10,7 @@
     width: 8vw;
     position: absolute;
     left: 70vw;
-    top: 14vw;
+    top: 16vw;
 }
 
 
@@ -22,5 +21,19 @@
     background-color: transparent;
 }
 
+#to-products-btn-wrapper {
+    margin: {
+        top: 6vw;
+        bottom: 4vw;
+    }
+}
 
+#to-products-btn {
+    background-color: orange;
+    color: black;
+    transition: color .3s ease-in-out;
+}
 
+#to-products-btn:hover {
+    color: darkred;
+}
