--- a/static/scss/_partials/portrait-mobile/pages/_register-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_register-page.scss
@@ -5,11 +5,27 @@
     padding-bottom: 20vw;
 }
 
+#registration-message {
+    width: 90vw;
+    margin: {
+        top: 4vw;
+        bottom: 4vw;
+    }
+}
+
 #registrationform {
     width: 90vw;
 }
 
+#submit-registration-btn-wrapper {
+    width: 100%;
+}
+
 #submit-registration-btn {
-    width: 30vw;
+    width: 40vw;
     background-color: lightblue;
+    color: rgb(65, 65, 65);
+    font-family: $dosisFont;
+    font-size: 5.5vw;
+    transition: color .3s ease-in-out;
 }
