--- a/templates/base.html
+++ b/templates/base.html
@@ -23,14 +23,15 @@
     <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button id="menubutton" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
+                <button id="menubutton" type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><span id="brandicon" class="glyphicon glyphicon-apple"></span> The Apple Shop</a>
+                <a class="navbar-brand" href="/"><span id="brandicon" class="glyphicon glyphicon-apple"></span> The
+                    Apple Shop</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right desktop-navbar">
@@ -62,7 +63,7 @@
                             <a href="{% url 'view_wishlist' %}"><i class="fa fa-star"></i>
                                 {% endif %}
                                 {%if wishlist_count > 0 %}
-                                <label class="badge badge-warning"><b>{{ wishlist_count }}</b></label>
+                                <label class="badge-wishlist badge-warning"><b>{{ wishlist_count }}</b></label>
                                 {% endif %}
                             </a>
                     </li>
@@ -98,7 +99,7 @@
                             <a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart"></i>
                                 {% endif %}
                                 {%if product_count > 0 %}
-                                <label class="badge badge-warning"><b>{{ product_count }}</b></label>
+                                <label class="badge-cart badge-warning"><b>{{ product_count }}</b></label>
                                 {% endif %}
                             </a>
                     </li>
@@ -113,7 +114,8 @@
                     </li>
                     <li class="mobile-list-items">
                         {% if "product" in app_path %}
-                        <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple active-app"></span> Products</a>
+                        <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple active-app"></span>
+                            Products</a>
                         {% else %}
                         <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple"></span> Products</a>
                         {% endif %}
@@ -132,7 +134,7 @@
                             <a href="{% url 'view_wishlist' %}"><i class="fa fa-star"></i> Wishlist
                                 {% endif %}
                                 {%if wishlist_count > 0 %}
-                                <label class="badge badge-warning"><b>{{ wishlist_count }}</b></label>
+                                <label class="badge badge-wishlist badge-warning"><b>{{ wishlist_count }}</b></label>
                                 {% endif %}
                             </a>
                     </li>
@@ -169,7 +171,7 @@
                             <a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart"></i> Cart
                                 {% endif %}
                                 {%if product_count > 0 %}
-                                <label class="badge badge-warning"><b>{{ product_count }}</b></label>
+                                <label class="badge badge-cart badge-warning"><b>{{ product_count }}</b></label>
                                 {% endif %}
                             </a>
                     </li>
@@ -204,7 +206,8 @@
                     </li>
                     <li class="quicklinks">
                         {% if "product" in app_path %}
-                        <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple products-icon active-app"></a>
+                        <a href="{% url 'products' %}"><span
+                                class="glyphicon glyphicon-apple products-icon active-app"></a>
                         {% else %}
                         <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple products-icon"></a>
                         {% endif %}
@@ -216,7 +219,7 @@
                             <a href="{% url 'view_wishlist' %}"><i class="fa fa-star"></i>
                                 {% endif %}
                                 {%if wishlist_count > 0 %}
-                                <label class="badge badge-warning">{{ wishlist_count }}</label>
+                                <label id="wishlist-badge-bottom" class="badge badge-wishlist badge-warning">{{ wishlist_count }}</label>
                                 {% endif %}
                             </a>
                     </li>
@@ -227,7 +230,7 @@
                             <a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart"></i>
                                 {% endif %}
                                 {%if product_count > 0 %}
-                                <label class="badge badge-warning">{{ product_count }}</label>
+                                <label id="cart-badge-bottom" class="badge badge-cart badge-warning">{{ product_count }}</label>
                                 {% endif %}
                             </a>
                     </li>
